--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
     <script src="aframe/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-sky color="#11bcee"></a-sky>
-	<a-circle color="green" radius="1" position="0 2 -3.5" rotation= "0 -45 0"></a-circle>
-	<a-cone color="tomato" radius-bottom="1" radius-top="0" height="2" position="1.5 2 -3.5"></a-cone>
-	<a-cylinder color="yellow" height="2.75" wireframe="true" theta-start="90" theta-length="270" side="double" position="-1.5 2 -3.5"
-		animation="property: rotation; to: 0 360 0; dur: 4000; easing: linear; loop: true"
-></a-cylinder>
-	<a-icosahedron color="#FF926B" radius="0.5" position="-2 1 -2"
-		animation="property: position; to: 2 1 -2; dur: 5000; easing: linear; loop: true"
-></a-icosahedron>
-	<a-camera position="0 1.6 0" rotation="0 0 0"></a-camera>
-	<a-text value="Hello, World!" position="-1 1 -1"></a-text>
-    </a-scene>
+    	<a-scene>
+			<a-sky color="grey"></a-sky>
+			<a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
+			<a-plane width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
+			<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
+			<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
+			<a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
+			<a-plane width="9" height="2" position="3 1 -9"></a-plane>
+			<a-text value="Welcome to browser's VR!" color="black" width="10" position="-0.5 1 -6" font="kater-msdf.json" negate="false"></a-text>
+	</a-scene>
   </body>
 </html>
